Change ProviderStorage init to use annotation to find classes
This is more compliant with modern java.